2008-09-28  Derek R. Price  <derek@ximbiot.com>

	* find_names.c (Find_Directories): Output returned list in traces.
	* hash.h (printlist): Add prototype.
	* ls.c (ls_direntproc): Add function trace.
	* recurse.c (do_recursion): Condense traces.
	(do_file_proc, do_dir_proc): Add function traces.

	* recurse.c: Back out previous accidental, undocumented, and broken
	commit.

2008-09-25  Derek R. Price  <derek@ximbiot.com>

	* client.c (send_repository, send_dirent_proc), recurse.c
	(do_file_proc): Cleanup.  Try harder to preserve update_dir.
	* server.c: Cleanup.
	(output_dir): Become wrapper for...
	(output_dir_i): ...this new function used...
	(serve_notify): ...here to avoid code duplication.
	* sanity.sh (server): Compensate for correct notify repository line.

	* create_adm.c: Some quoting and cleanup.
	* repos.c (Short_Repository): Improve header comment.  Assert truths.
	Strip all trailing slashes.

	* checkout.c: Some Traces.  Some cleanup.
	(checkout_proc): Pass empty update_dir to build_one_dir.
	* create_adm.c: Some cleanup.
	* rcs.c (RCS_setattic): Simplify via cvs_mkdir().
	* repos.c (Sanitize_Repository_Name): Strip any number of /.?
	* subr.c (mkdir_i): Assume UPDATE_DIR is a full path when set.

	* status.c, update.c: Some cleanup.
	* subr.c (dir_append_dirs): Extend to ignore ./*.  Improve header block
	comment.
	* tag.c: Some cleanup.
	(check_fileproc): Improve error message.
	* sanity.sh (basica-4a): Update to compensate for new error message.

2008-09-22  Derek R. Price  <derek@ximbiot.com>

	* repos.c (Name_Repository): Clean up and simplify.
	* sanity.sh: Update to compensate for changed error messages.

	* log.c, main.c, remove.c: Some cleanup.
	* rcs.c: Likewise.
	(locate_rcs): Export.  Change int arg to bool.
	* rcs.h (locate_rcs): Add prototype.

	* stack.c (unshift_string_array, init_string_list): New utility
	functions.
	* stack.h (unshift_string_array, init_string_list): Prototypes for
	same.

	* edit.c (ncheck_fileproc): Rename to...